# ha_python_ws_api

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
include/: auth.py  example.py  test2.py  websockethandler.py
src/: auth.py
src/ha_python_ws_api/: __init__.py  websockethandler.py
